src/bootstrap/src/core/builder/cli_paths/snapshots/x_build.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build
---
[Build] compile::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({"library"})
    - Set({"library/alloc"})
    - Set({"library/compiler-builtins/compiler-builtins"})
    - Set({"library/core"})
    - Set({"library/panic_abort"})
    - Set({"library/panic_unwind"})
    - Set({"library/proc_macro"})
    - Set({"library/rustc-std-workspace-core"})
    - Set({"library/std"})
    - Set({"library/std_detect"})
    - Set({"library/sysroot"})
    - Set({"library/test"})
    - Set({"library/unwind"})
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/librustdoc", "src/tools/rustdoc"})
