src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_compiletest.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build compiletest
---
[Build] tool::Compiletest
    targets: [aarch64-unknown-linux-gnu]
    - Set({"src/tools/compiletest"})
