src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_llvm.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build llvm
---
[Build] llvm::Llvm
    targets: [x86_64-unknown-linux-gnu]
    - Set({"src/llvm-project/llvm"})
