src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_rust_analyzer_proc_macro_srv.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build rust-analyzer-proc-macro-srv
---
[Build] tool::RustAnalyzerProcMacroSrv
    targets: [x86_64-unknown-linux-gnu]
    - Set({src/tools/rust-analyzer/crates/proc-macro-srv-cli})
