src/bootstrap/src/core/builder/cli_paths/snapshots/x_build_rustc_llvm.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build rustc_llvm
---
[Build] compile::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({"compiler/rustc_llvm"})
